fix: URLEncoder.encode StandardCharsets.UTF_8 타입 수정 및 백엔드 빌드 검증 성공